// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ScreenContent should pass props down 1`] = `
<div
  className="base"
  data1="data 1"
  data2="data 2"
/>
`;

exports[`renders renders ScreenContent 1`] = `
<div
  className="base"
/>
`;
